regression-tests/test-results/clang-15-c++20-libcpp/mixed-function-expression-with-pointer-capture.cpp.output
mixed-function-expression-with-pointer-capture.cpp2:13:18: error: no member named 'for_each' in namespace 'std::ranges'
    std::ranges::for_each(vec, [_0 = (&y)](auto const& x) mutable -> void { 
    ~~~~~~~~~~~~~^
mixed-function-expression-with-pointer-capture.cpp2:18:18: error: no member named 'for_each' in namespace 'std::ranges'
    std::ranges::for_each(vec, cpp2::move(callback));
    ~~~~~~~~~~~~~^
2 errors generated.
